// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots ThemeProvider Basic 1`] = `null`;

exports[`Storyshots UI|Button Buttons 1`] = `
Array [
  <button
    className="css-1pahthz"
    onClick={[Function]}
  >
    Default
  </button>,
  <button
    className="css-17v2y0s"
    onClick={[Function]}
  >
    Primary
  </button>,
  <button
    className="css-14jjnt5"
    onClick={[Function]}
  >
    Secondary
  </button>,
  <br />,
  <button
    className="css-1pahthz"
    onClick={[Function]}
  >
    Default
  </button>,
  <button
    className="css-1bfmiiv"
    onClick={[Function]}
    shape="round"
  >
    Round
  </button>,
  <button
    className="css-fvqbd0"
    onClick={[Function]}
    shape="circle"
  >
    Circle
  </button>,
]
`;

exports[`Storyshots UI|Button Responsive 1`] = `
<button
  className="css-futjw9"
  onClick={[Function]}
>
  Resize viewport to see variant change in action
</button>
`;

exports[`Storyshots UI|Button Shape 1`] = `
Array [
  <button
    className="css-1pahthz"
  >
    Default
  </button>,
  <button
    className="css-1wusvpy"
    shape="round"
  >
    Round
  </button>,
  <button
    className="css-1tsb8ub"
    shape="circle"
  >
    Circle
  </button>,
]
`;

exports[`Storyshots UI|Button Variant 1`] = `
Array [
  <button
    className="css-1pahthz"
  >
    Default
  </button>,
  <button
    className="css-17v2y0s"
  >
    Primary
  </button>,
  <button
    className="css-14jjnt5"
  >
    Secondary
  </button>,
]
`;
